@@ -1006,6 +1006,7 @@ containing all of the search terms will appear in the result).",
 # Preferences page
 #
 'preferences'	=> 'Preferences',
+'preferences-summary'	=> '',
 'mypreferences'	=> 'My preferences',
 'prefsnologin' => 'Not logged in',
 'prefsnologintext'	=> "You must be [[Special:Userlogin|logged in]] to set user preferences.",
@@ -1296,15 +1297,19 @@ The [http://meta.wikimedia.org/wiki/Help:Job_queue job queue] length is '''$7'''
 'mostimages'	=> 'Most linked to images',
 'mostrevisions' => 'Articles with the most revisions',
 'allpages'		=> 'All pages',
+'allpages-summary'	=> '',
 'prefixindex'   => 'Prefix index',
 'randompage'	=> 'Random page',
 'randompage-url'=> 'Special:Random',
 'shortpages'	=> 'Short pages',
 'longpages'		=> 'Long pages',
+'longpages-summary'	=> '',
 'deadendpages'  => 'Dead-end pages',
 'deadendpagestext'	=> 'The following pages do not link to other pages in this wiki.',
 'listusers'		=> 'User list',
+'listusers-summary'	=> '',
 'specialpages'	=> 'Special pages',
+'specialpages-summary'	=> '',
 'spheading'		=> 'Special pages for all users',
 'restrictedpheading'	=> 'Restricted special pages',
 'recentchangeslinked' => 'Related changes',
@@ -1321,6 +1326,7 @@ in active use.</p>',
 'unusedcategoriestext' => 'The following category pages exist although no other article or category make use of them.',
 
 'booksources'	=> 'Book sources',
+'booksources-summary'	=> '',
 'categoriespagetext' => 'The following categories exist in the wiki.',
 'data'	=> 'Data',
 'userrights' => 'User rights management',
@@ -1586,6 +1592,7 @@ Consult the [[Special:Log/delete|deletion log]] for a record of recent deletions
 # What links here
 #
 'whatlinkshere'	=> 'What links here',
+'whatlinkshere-summary'	=> '',
 'notargettitle' => 'No target',
 'notargettext'	=> 'You have not specified a target page or user
 to perform this function on.',
@@ -1624,6 +1631,7 @@ to a previously blocked IP address or username.',
 'ipusubmit'		=> 'Unblock this address',
 'unblocked' => '[[User:$1|$1]] has been unblocked',
 'ipblocklist'	=> 'List of blocked IP addresses and usernames',
+'ipblocklist-summary'	=> '',
 'blocklistline'	=> "$1, $2 blocked $3 ($4)",
 'infiniteblock' => 'infinite',
 'expiringblock' => 'expires $1',
